--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<html>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <head>
-<link rel="stylesheet" href="stylesheet.css" type="text/css" />
+<link rel="stylesheet" href="stylesheet.css" type="text/css">
 <title>HTML 1.0 Tags</title>
 </head>
 <body>
@@ -437,7 +436,7 @@ dargestellt wird</td>
 </ol>
 </div>
 <div class="foot" id="foot">
-<img src="http://www.w3.org/Icons/valid-xhtml10"></img><img src="http://www.w3.org/Icons/valid-css2-blue"></img></div>
+<img src="http://www.w3.org/Icons/valid-xhtml10" alt="W3C"></img><img src="http://www.w3.org/Icons/valid-css2-blue" alt="W3C"></img></div>
 </div>
 </body>
 </html>
