--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ dargestellt wird</td>
 </ol>
 </div>
 <div class="foot" id="foot">
-<img src="http://www.w3.org/Icons/valid-xhtml10" alt="W3C"></img><img src="http://www.w3.org/Icons/valid-css2-blue" alt="W3C"></img></div>
+<a href="http://validator.w3.org/check?uri=http%3A%2F%2Fdanielponath1.cloudcontrolled.com%2F><img src="http://www.w3.org/Icons/valid-xhtml10" alt="W3C"></img></a><a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fdanielponath1.cloudcontrolled.com%2F&profile=css3&usermedium=all&warning=1&vextwarning="><img src="http://www.w3.org/Icons/valid-css2-blue" alt="W3C"></img></a></div>
 </div>
 </body>
 </html>
