--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" href="stylesheet.css" type="text/css" />
-<title>HTML 1.0 Tags</title>
+<link rel="stylesheet" href="stylesheet.css" type="text/css" /><title>HTML 1.0 Tags</title>
+
 </head>
 <body>
 <div class="table">
@@ -14,410 +12,564 @@
 <tr>
 <td class="thead">Element</td>
 <td class="thead">Bedeutung</td>
-<td class="thead">Semantic Tag?</td>
+<td class="thead">Element-Typ</td>
+<td class="thead">Semantic</td>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>a</td>
+<td>&lt;a&gt;&lt;/a&gt;</td>
 <td>Verweis (Hyperlink) und Anker für Verweise</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>abbr</td>
+<td>&lt;abbr&gt;&lt;/abbr&gt;</td>
+
 <td>Abkürzung</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>acronym</td>
+<td>&lt;acronym&gt;&lt;/acronym&gt;</td>
+
 <td>Kennzeichnet ein Akronym</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>address</td>
+<td>&lt;address&gt;&lt;/address&gt;</td>
+
 <td>Kontaktangabe zum Autor eines Inhalts (Credits)</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>area</td>
+<td>&lt;area&gt;</td>
+
 <td>Verweis-sensitiver Bereich in einer Image-Map-Grafik</td>
-<td>Semantic Tag</td>
+<td>-</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>b</td>
+<td>&lt;b&gt;&lt;/b&gt;</td>
+
 <td>Stilistische Hervorhebung im Text (üblicherweise fett
 dargestellt)</td>
-<td>Nicht Semantic Tag Tag</td>
+<td>Inline</td>
+<td>Nicht Semantic</td>
 </tr>
 <tr>
-<td>base</td>
+<td>&lt;base&gt;</td>
+
 <td>Basis-URL für Referenzen</td>
+<td>-</td>
 <td>Neutral</td>
 </tr>
 <tr class="tr2">
-<td>bdo</td>
+<td>&lt;bdo&gt;&lt;/bdo&gt;</td>
+
 <td>Richtungsänderung bei bidirektionalem Text</td>
+<td>Inline</td>
 <td>Neutral</td>
 </tr>
 <tr>
-<td>big</td>
+<td>&lt;big&gt;&lt;/big&gt;</td>
+
 <td>Text größer darstellen</td>
-<td>Nicht Semantic Tag Tag</td>
+<td>Inline</td>
+<td>Nicht Semantic</td>
 </tr>
 <tr class="tr2">
-<td>blockquote</td>
+<td>&lt;blockquote&gt;&lt;/blockquote&gt;</td>
+
 <td>Zitat in Form eines eigenen Textabsatzes</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>body</td>
+<td>&lt;body&gt;&lt;/body&gt;</td>
+
 <td>Inhaltsbereich eines HTML-Dokuments</td>
+<td>Block</td>
 <td>Neutral</td>
 </tr>
 <tr class="tr2">
-<td>br</td>
+<td>&lt;br&gt;</td>
+
 <td>Erzwungener Zeilenumbruch an der betreffenden Stelle</td>
-<td>Nicht Semantic Tag Tag</td>
+<td>Inline</td>
+<td>Nicht Semantic</td>
 </tr>
 <tr>
-<td>button</td>
+<td>&lt;button&gt;&lt;/button&gt;</td>
+
 <td>Schaltfläche in einem Formular</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>caption</td>
+<td>&lt;caption&gt;&lt;/caption&gt;</td>
+
 <td>Tabellenüberschrift / -unterschrift</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>cite</td>
+<td>&lt;cite&gt;&lt;/cite&gt;</td>
+
 <td>Zitat innerhalb eines Absatzes</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>code</td>
+<td>&lt;code&gt;&lt;/code&gt;</td>
+
 <td>Quelltext-Auszug innerhalb eines Absatzes</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>col</td>
+<td>&lt;col&gt;&lt;/col&gt;</td>
+
 <td>Tabellenspalte</td>
-<td>Semantic Tag</td>
+<td>-</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>colgroup</td>
+<td>&lt;colgroup&gt;&lt;/colgroup&gt;</td>
+
 <td>Gruppe von Tabellenspalten</td>
-<td>Semantic Tag</td>
+<td>-</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>dd</td>
+<td>&lt;dd&gt;&lt;/dd&gt;</td>
+
 <td>Definition, Beschreibung, detaillierter Inhalt zu einem
 dt-Element</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>del</td>
+<td>&lt;del&gt;&lt;/del&gt;</td>
+
 <td>gelöschter Inhalt (Änderungsmarkierung)</td>
-<td>Neutral</td>
+<td>Inline</td>
+<td>Nicht Semantic</td>
 </tr>
 <tr>
-<td>dfn</td>
+<td>&lt;dfn&gt;&lt;/dfn&gt;</td>
+
 <td>Definition innerhalb eines Absatzes</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>div</td>
+<td>&lt;div&gt;&lt;/div&gt;</td>
+
 <td>Allgemeiner Bereich</td>
+<td>Block</td>
 <td>Neutral</td>
 </tr>
 <tr>
-<td>dl</td>
+<td>&lt;dl&gt;&lt;/dl&gt;</td>
+
 <td>Liste mit dt- und dd-Elementen, für Definitionslisten,
 Dialoge usw.</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>dt</td>
+<td>&lt;dt&gt;&lt;/dt&gt;</td>
+
 <td>Zu definierender Ausdruck in einer Definitionsliste,
 Sprechername in einem Dialog usw.</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>em</td>
+<td>&lt;em&gt;&lt;/em&gt;</td>
+
 <td>emphatischer Ausdruck innerhalb eines Absatzes (z.B.
 überspitzte Formulierung)</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>fieldset</td>
+<td>&lt;fieldset&gt;&lt;/fieldset&gt;</td>
+
 <td>Gruppe von Elementen in einem Formular, Reiter in einem
 Dialog</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>form</td>
+<td>&lt;form&gt;&lt;/form&gt;</td>
+
 <td>Formular, Dialog</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>h1</td>
+<td>&lt;h1&gt;&lt;/h1&gt;</td>
+
 <td>Überschrift 1. Ordnung</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>h2</td>
+<td>&lt;h2&gt;&lt;/h2&gt;</td>
+
 <td>Überschrift 2. Ordnung</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>h3</td>
+<td>&lt;h3&gt;&lt;/h3&gt;</td>
+
 <td>Überschrift 3. Ordnung</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>h4</td>
+<td>&lt;h4&gt;&lt;/h4&gt;</td>
+
 <td>Überschrift 4. Ordnung</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>h5</td>
+<td>&lt;h5&gt;&lt;/h5&gt;</td>
+
 <td>Überschrift 5. Ordnung</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>h6</td>
+<td>&lt;h6&gt;&lt;/h6&gt;</td>
+
 <td>Überschrift 6. Ordnung</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>head</td>
+<td>&lt;head&gt;&lt;/head&gt;</td>
+
 <td>Kopfbereich eines HTML-Dokuments</td>
+<td>-</td>
 <td>Neutral</td>
 </tr>
 <tr>
-<td>hr</td>
+<td>&lt;hr&gt;</td>
+
 <td>Trennlinie</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>html</td>
+<td>&lt;html&gt;&lt;/html&gt;</td>
+
 <td>Dokumentelement von HTML-Dokumenten, schließt das
 gesamte Dokument ein</td>
+<td>-</td>
 <td>Neutral</td>
 </tr>
 <tr>
-<td>i</td>
+<td>&lt;i&gt;&lt;/i&gt;</td>
+
 <td>spezieller Ausdruck im Text, z.B. Fachterminus oder
 Idiom (üblicherweise kursiv dargestellt)</td>
-<td>Nicht Semantic Tag Tag</td>
+<td>Inline</td>
+<td>Nicht Semantic</td>
 </tr>
 <tr class="tr2">
-<td>img</td>
+<td>&lt;img&gt;</td>
+
 <td>Referenzierte und eingebettete Grafik</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>input</td>
+<td>&lt;input&gt;&lt;/input&gt;</td>
+
 <td>Formularelement, verwendbar für diverse Typen wie
 Eingabefelder, Schaltflächen, Auswahlfelder usw.</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>ins</td>
+<td>&lt;ins&gt;&lt;/ins&gt;</td>
+
 <td>Eingefügter Inhalt (Änderungsmarkierung)</td>
+<td>Block</td>
 <td>Neutral</td>
 </tr>
 <tr>
-<td>kbd</td>
+<td>&lt;kbd&gt;&lt;/kbd&gt;</td>
+
 <td>Darstellung eines über Tastatur einzugebenden Textes im
 Text</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>label</td>
+<td>&lt;label&gt;&lt;/label&gt;</td>
+
 <td>Beschriftungstext eines Formularfeldes</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>legend</td>
+<td>&lt;legend&gt;&lt;/legend&gt;</td>
+
 <td>Überschrift für eine fieldset-Gruppe von Elementen in
 einem Formular</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>li</td>
+<td>&lt;li&gt;&lt;/li&gt;</td>
+
 <td>Listenpunkt in einer ul-, ol- oder menu-Liste</td>
-<td>Semantic Tag</td>
+<td>-</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>link</td>
+<td>&lt;link &nbsp; /&gt;</td>
+
 <td>Logische Beziehungen der aktuellen Webseite zu anderen
 Webseiten</td>
-<td>Semantic Tag</td>
+<td>-</td>
+<td>Neutral</td>
 </tr>
 <tr class="tr2">
-<td>map</td>
+<td>&lt;map&gt;&lt;/map&gt;</td>
+
 <td>Bereich für verweis-sensitive Grafiken</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>meta</td>
+<td>&lt;meta &nbsp; /&gt;</td>
+
 <td>Meta-Angabe für Nicht im Inhalt sichtbare
 Dokumentinformationen oder für Anweisungen an den Webserver</td>
+<td>Inline</td>
 <td>Neutral</td>
 </tr>
 <tr class="tr2">
-<td>noscript</td>
+<td>&lt;noscript&gt;&lt;/noscript&gt;</td>
+
 <td>Bereich für Inhalte, die angezeigt werden, wenn
 JavaScript im Browser deaktiviert oder Nicht verfügbar ist</td>
+<td>-</td>
 <td>Neutral</td>
 </tr>
 <tr>
-<td>object</td>
+<td>&lt;object&gt;&lt;/object&gt;</td>
+
 <td>Eingebettetes Objekt, geeignet für spezielle
 Multimedia-Objekte, Java-Applets usw.</td>
+<td>-</td>
 <td>Neutral</td>
 </tr>
 <tr class="tr2">
-<td>ol</td>
+<td>&lt;ol&gt;&lt;/ol&gt;</td>
+
 <td>Geordnete (z.B. nummerierte) Liste</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>optgroup</td>
+<td>&lt;optgroup&gt;&lt;/optgroup&gt;</td>
+
 <td>Gruppe von Auswahlmöglichkeiten in einer Auswahlliste</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>option</td>
+<td>&lt;option&gt;&lt;/option&gt;</td>
+
 <td>Auswahlmöglichkeit in einer Auswahlliste</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>p</td>
+<td>&lt;p&gt;&lt;/p&gt;</td>
+
 <td>Textabsatz</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>param</td>
+<td>&lt;param&gt;&lt;/param&gt;</td>
+
 <td>Parameter eines Objekts bei object-Element</td>
+<td>-</td>
 <td>Neutral</td>
 </tr>
 <tr>
-<td>pre</td>
+<td>&lt;pre&gt;&lt;/pre&gt;</td>
+
 <td>Präformatierter Text (alle Whitespace-Zeichen werden im
 Browser so dargestellt wie im Text enthalten)</td>
-<td>Nicht Semantic Tag Tag</td>
+<td>Block</td>
+<td>Nicht Semantic</td>
 </tr>
 <tr class="tr2">
-<td>q</td>
+<td>&lt;q&gt;&lt;/q&gt;</td>
+
 <td>Wörtliche Rede in einem Text</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>samp</td>
+<td>&lt;samp&gt;&lt;/samp&gt;</td>
+
 <td>Beispieltext in einem dokumentierenden Text</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>script</td>
+<td>&lt;script&gt;&lt;/script&gt;</td>
+
 <td>Scriptbereich für JavaScript und andere Scriptsprachen</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>select</td>
+<td>&lt;select&gt;&lt;/select&gt;</td>
+
 <td>Auswahlliste in einem Formular</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>small</td>
+<td>&lt;small&gt;&lt;/small&gt;</td>
+
 <td>kleiner dargestellter Text als Normalschrift</td>
-<td>Nicht Semantic Tag Tag</td>
+<td>Inline</td>
+<td>Nicht Semantic</td>
 </tr>
 <tr>
-<td>span</td>
+<td>&lt;span&gt;&lt;/span&gt;</td>
+
 <td>allgemeiner Bereich innerhalb eines Absatzes</td>
+<td>Inline</td>
 <td>Neutral</td>
 </tr>
 <tr class="tr2">
-<td>strong</td>
+<td>&lt;strong&gt;&lt;/strong&gt;</td>
+
 <td>stark betonter Inhalt im Text</td>
-<td>Nicht Semantic Tag Tag</td>
+<td>Inline</td>
+<td>Nicht Semantic</td>
 </tr>
 <tr>
-<td>style</td>
+<td>&lt;style&gt;&lt;/style&gt;</td>
+
 <td>Bereich für Stylesheet-Definitionen, z.B. in CSS</td>
+<td>-</td>
 <td>Neutral</td>
 </tr>
 <tr class="tr2">
-<td>sub</td>
+<td>&lt;sub&gt;&lt;/sub&gt;</td>
+
 <td>Tiefgestellter Text</td>
-<td>Nicht Semantic Tag Tag</td>
+<td>Inline</td>
+<td>Nicht Semantic</td>
 </tr>
 <tr>
-<td>sup</td>
+<td>&lt;sup&gt;&lt;/sup&gt;</td>
+
 <td>Hochgestellter Text</td>
-<td>Nicht Semantic Tag Tag</td>
+<td>Inline</td>
+<td>Nicht Semantic</td>
 </tr>
 <tr class="tr2">
-<td>table</td>
+<td>&lt;table&gt;&lt;/table&gt;</td>
+
 <td>Tabelle</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>tbody</td>
+<td>&lt;tbody&gt;&lt;/tbody&gt;</td>
+
 <td>Tabellenkörper mit den eigentlichen Daten</td>
-<td>Semantic Tag</td>
+<td>-</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>td</td>
+<td>&lt;td&gt;&lt;/td&gt;</td>
+
 <td>Tabellenzelle</td>
-<td>Semantic Tag</td>
+<td>-</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>textarea</td>
+<td>&lt;textarea&gt;&lt;/textarea&gt;</td>
+
 <td>Mehrzeiliger Eingabebereich in einem Formular</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>tfoot</td>
+<td>&lt;tfoot&gt;&lt;/tfoot&gt;</td>
+
 <td>Fußbereich in einer Tabelle, z.B. für summarische Daten</td>
-<td>Semantic Tag</td>
+<td>-</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>th</td>
+<td>&lt;th&gt;&lt;/th&gt;</td>
+
 <td>Tabellenkopfzelle</td>
-<td>Semantic Tag</td>
+<td>-</td>
+<td>Semantic</td>
 </tr>
 <tr class="tr2">
-<td>thead</td>
+<td>&lt;thead&gt;&lt;/thead&gt;</td>
+
 <td>Kopfbereich einer Tabelle</td>
-<td>Semantic Tag</td>
+<td>-</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>title</td>
+<td>&lt;title&gt;&lt;/title&gt;</td>
+
 <td>Titel eines HTML-Dokuments</td>
+<td>-</td>
 <td>Neutral</td>
 </tr>
 <tr class="tr2">
-<td>tr</td>
+<td>&lt;tr&gt;&lt;/tr&gt;</td>
+
 <td>Tabellenzeile</td>
-<td>Semantic Tag</td>
+<td>Inline</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>tt</td>
+<td>&lt;tt&gt;&lt;/tt&gt;</td>
+
 <td>Markiert einen Text, der im Schreibmaschinenstil
 dargestellt wird</td>
-<td>Nicht Semantic Tag Tag</td>
+<td>Inline</td>
+<td>Nicht Semantic</td>
 </tr>
 <tr class="tr2">
-<td>ul</td>
+<td>&lt;ul&gt;&lt;/ul&gt;</td>
+
 <td>Unsortierte Liste (Aufzählungsliste)</td>
-<td>Semantic Tag</td>
+<td>Block</td>
+<td>Semantic</td>
 </tr>
 <tr>
-<td>var</td>
+<td>&lt;var&gt;&lt;/var&gt;</td>
+
 <td>Variabler Name in einem dokumentierenden Text</td>
+<td>Inline</td>
 <td>Neutral</td>
 </tr>
 </tbody>
@@ -436,7 +588,6 @@ dargestellt wird</td>
 </ol>
 </div>
 <div class="foot" id="foot">
-<a href="http://validator.w3.org/check?uri=http%3A%2F%2Fdanielponath1.cloudcontrolled.com%2F"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="W3C"></img></a><a href="http://redir.ec/trOAI"><img src="http://www.w3.org/Icons/valid-css2-blue" alt="W3C"></img></a></div>
+<a href="http://validator.w3.org/check?uri=http%3A%2F%2Fdanielponath1.cloudcontrolled.com%2F"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="W3C" /></a><a href="http://redir.ec/trOAI"><img src="http://www.w3.org/Icons/valid-css2-blue" alt="W3C" /></a></div>
 </div>
-</body>
-</html>
+</body></html>
