--- a/form.html
+++ b/form.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Strict//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
+<html lang="de">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="content-language" content="de">
+<link rel="stylesheet" href="stylesheet_form.css" type="text/css">
 <title>Wiki Suchformular</title>
 </head>
 <body>
