--- a/boot.html
+++ b/boot.html
@@ -31,19 +31,19 @@ Webentwicklung<br>
 </div>
 <div class="row marketing">
 <div class="col-lg-6">
-<h4>Liste aller HTML 1.0 strict Tags</h4>
+<h4><a href="index.html">Liste aller HTML 1.0 strict Tags</a></h4>
 <p>Eine Tabelle zu 77 HTML 1.0 Tags mit Bedeutung, Elementtyp und
 Einteilung in Semantisch</p>
-<p><a class="btn btn-lg btn-success" href="index.html" role="button">Zum Artikel</a></p>
+<p><a class="btn btn-lg btn-success" href="index.html" role="button">Zur Hausaufgabe</a></p>
 </div>
 <div class="col-lg-6">
-<h4>Wikipedia Suchformular - Barrierefrei</h4>
-<p>Ein Wikipediasuchformular zur Volltextsuche und Artikelsuch</p>
-<p><a class="btn btn-lg btn-success" href="form.html" role="button">Zum Artikel</a></p>
+<h4><a href="form.html">Wikipedia Suchformular - Barrierefrei</a></h4>
+<p>Ein Wikipediasuchformular zur Volltextsuche und Artikelsuche</p>
+<p><a class="btn btn-lg btn-success" href="form.html" role="button">Zur Hausaufgabe</a></p>
 </div>
 </div>
 <div class="footer">
-<p>© Daniel Ponath 2013</p>
+<p><a href="impress.html">Impressum</a>  |  © Daniel Ponath 2013  |  Jumbotron Narrow Theme</p>
 </div>
 <!-- /container --><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://code.jquery.com/jquery.js"></script><!-- Include all compiled plugins (below), or include individual files as needed -->
