--- a/impress.html
+++ b/impress.html
@@ -38,7 +38,7 @@ Daniel Ponath<br>
 </div>
 </div>
 <div class="footer">
-<p>© Daniel Ponath 2013</p>
+<p><a href="impress.html">Impressum</a>  |  © Daniel Ponath 2013  |  Jumbotron Narrow Theme</p>
 </div>
 <!-- /container --><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://code.jquery.com/jquery.js"></script><!-- Include all compiled plugins (below), or include individual files as needed -->
