--- a/index.html
+++ b/index.html
@@ -1,593 +1,53 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" href="stylesheet.css" type="text/css" /><title>HTML 1.0 Tags</title>
-
-</head>
-<body>
-<div class="table">
-<h1 id="hmain">Überblick zu HTML 1.0 strict Tags</h1>
-<table>
-<thead>
-<tr>
-<td class="thead">Element</td>
-<td class="thead">Bedeutung</td>
-<td class="thead">Element-Typ</td>
-<td class="thead">Semantic</td>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>&lt;a&gt;&lt;/a&gt;</td>
-<td>Verweis (Hyperlink) und Anker für Verweise</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;abbr&gt;&lt;/abbr&gt;</td>
-
-<td>Abkürzung</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;acronym&gt;&lt;/acronym&gt;</td>
-
-<td>Kennzeichnet ein Akronym</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;address&gt;&lt;/address&gt;</td>
-
-<td>Kontaktangabe zum Autor eines Inhalts (Credits)</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;area&gt;</td>
-
-<td>Verweis-sensitiver Bereich in einer Image-Map-Grafik</td>
-<td>-</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;b&gt;&lt;/b&gt;</td>
-
-<td>Stilistische Hervorhebung im Text (üblicherweise fett
-dargestellt)</td>
-<td>Inline</td>
-<td>Nicht Semantic</td>
-</tr>
-<tr>
-<td>&lt;base&gt;</td>
-
-<td>Basis-URL für Referenzen</td>
-<td>-</td>
-<td>Neutral</td>
-</tr>
-<tr class="tr2">
-<td>&lt;bdo&gt;&lt;/bdo&gt;</td>
-
-<td>Richtungsänderung bei bidirektionalem Text</td>
-<td>Inline</td>
-<td>Neutral</td>
-</tr>
-<tr>
-<td>&lt;big&gt;&lt;/big&gt;</td>
-
-<td>Text größer darstellen</td>
-<td>Inline</td>
-<td>Nicht Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;blockquote&gt;&lt;/blockquote&gt;</td>
-
-<td>Zitat in Form eines eigenen Textabsatzes</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;body&gt;&lt;/body&gt;</td>
-
-<td>Inhaltsbereich eines HTML-Dokuments</td>
-<td>Block</td>
-<td>Neutral</td>
-</tr>
-<tr class="tr2">
-<td>&lt;br&gt;</td>
-
-<td>Erzwungener Zeilenumbruch an der betreffenden Stelle</td>
-<td>Inline</td>
-<td>Nicht Semantic</td>
-</tr>
-<tr>
-<td>&lt;button&gt;&lt;/button&gt;</td>
-
-<td>Schaltfläche in einem Formular</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;caption&gt;&lt;/caption&gt;</td>
-
-<td>Tabellenüberschrift / -unterschrift</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;cite&gt;&lt;/cite&gt;</td>
-
-<td>Zitat innerhalb eines Absatzes</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;code&gt;&lt;/code&gt;</td>
-
-<td>Quelltext-Auszug innerhalb eines Absatzes</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;col&gt;&lt;/col&gt;</td>
-
-<td>Tabellenspalte</td>
-<td>-</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;colgroup&gt;&lt;/colgroup&gt;</td>
-
-<td>Gruppe von Tabellenspalten</td>
-<td>-</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;dd&gt;&lt;/dd&gt;</td>
-
-<td>Definition, Beschreibung, detaillierter Inhalt zu einem
-dt-Element</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;del&gt;&lt;/del&gt;</td>
-
-<td>gelöschter Inhalt (Änderungsmarkierung)</td>
-<td>Inline</td>
-<td>Nicht Semantic</td>
-</tr>
-<tr>
-<td>&lt;dfn&gt;&lt;/dfn&gt;</td>
-
-<td>Definition innerhalb eines Absatzes</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;div&gt;&lt;/div&gt;</td>
-
-<td>Allgemeiner Bereich</td>
-<td>Block</td>
-<td>Neutral</td>
-</tr>
-<tr>
-<td>&lt;dl&gt;&lt;/dl&gt;</td>
-
-<td>Liste mit dt- und dd-Elementen, für Definitionslisten,
-Dialoge usw.</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;dt&gt;&lt;/dt&gt;</td>
-
-<td>Zu definierender Ausdruck in einer Definitionsliste,
-Sprechername in einem Dialog usw.</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;em&gt;&lt;/em&gt;</td>
-
-<td>emphatischer Ausdruck innerhalb eines Absatzes (z.B.
-überspitzte Formulierung)</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;fieldset&gt;&lt;/fieldset&gt;</td>
-
-<td>Gruppe von Elementen in einem Formular, Reiter in einem
-Dialog</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;form&gt;&lt;/form&gt;</td>
-
-<td>Formular, Dialog</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;h1&gt;&lt;/h1&gt;</td>
-
-<td>Überschrift 1. Ordnung</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;h2&gt;&lt;/h2&gt;</td>
-
-<td>Überschrift 2. Ordnung</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;h3&gt;&lt;/h3&gt;</td>
-
-<td>Überschrift 3. Ordnung</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;h4&gt;&lt;/h4&gt;</td>
-
-<td>Überschrift 4. Ordnung</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;h5&gt;&lt;/h5&gt;</td>
-
-<td>Überschrift 5. Ordnung</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;h6&gt;&lt;/h6&gt;</td>
-
-<td>Überschrift 6. Ordnung</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;head&gt;&lt;/head&gt;</td>
-
-<td>Kopfbereich eines HTML-Dokuments</td>
-<td>-</td>
-<td>Neutral</td>
-</tr>
-<tr>
-<td>&lt;hr&gt;</td>
-
-<td>Trennlinie</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;html&gt;&lt;/html&gt;</td>
-
-<td>Dokumentelement von HTML-Dokumenten, schließt das
-gesamte Dokument ein</td>
-<td>-</td>
-<td>Neutral</td>
-</tr>
-<tr>
-<td>&lt;i&gt;&lt;/i&gt;</td>
-
-<td>spezieller Ausdruck im Text, z.B. Fachterminus oder
-Idiom (üblicherweise kursiv dargestellt)</td>
-<td>Inline</td>
-<td>Nicht Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;img&gt;</td>
-
-<td>Referenzierte und eingebettete Grafik</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;input&gt;&lt;/input&gt;</td>
-
-<td>Formularelement, verwendbar für diverse Typen wie
-Eingabefelder, Schaltflächen, Auswahlfelder usw.</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;ins&gt;&lt;/ins&gt;</td>
-
-<td>Eingefügter Inhalt (Änderungsmarkierung)</td>
-<td>Block</td>
-<td>Neutral</td>
-</tr>
-<tr>
-<td>&lt;kbd&gt;&lt;/kbd&gt;</td>
-
-<td>Darstellung eines über Tastatur einzugebenden Textes im
-Text</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;label&gt;&lt;/label&gt;</td>
-
-<td>Beschriftungstext eines Formularfeldes</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;legend&gt;&lt;/legend&gt;</td>
-
-<td>Überschrift für eine fieldset-Gruppe von Elementen in
-einem Formular</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;li&gt;&lt;/li&gt;</td>
-
-<td>Listenpunkt in einer ul-, ol- oder menu-Liste</td>
-<td>-</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;link &nbsp; /&gt;</td>
-
-<td>Logische Beziehungen der aktuellen Webseite zu anderen
-Webseiten</td>
-<td>-</td>
-<td>Neutral</td>
-</tr>
-<tr class="tr2">
-<td>&lt;map&gt;&lt;/map&gt;</td>
-
-<td>Bereich für verweis-sensitive Grafiken</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;meta &nbsp; /&gt;</td>
-
-<td>Meta-Angabe für Nicht im Inhalt sichtbare
-Dokumentinformationen oder für Anweisungen an den Webserver</td>
-<td>Inline</td>
-<td>Neutral</td>
-</tr>
-<tr class="tr2">
-<td>&lt;noscript&gt;&lt;/noscript&gt;</td>
-
-<td>Bereich für Inhalte, die angezeigt werden, wenn
-JavaScript im Browser deaktiviert oder Nicht verfügbar ist</td>
-<td>-</td>
-<td>Neutral</td>
-</tr>
-<tr>
-<td>&lt;object&gt;&lt;/object&gt;</td>
-
-<td>Eingebettetes Objekt, geeignet für spezielle
-Multimedia-Objekte, Java-Applets usw.</td>
-<td>-</td>
-<td>Neutral</td>
-</tr>
-<tr class="tr2">
-<td>&lt;ol&gt;&lt;/ol&gt;</td>
-
-<td>Geordnete (z.B. nummerierte) Liste</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;optgroup&gt;&lt;/optgroup&gt;</td>
-
-<td>Gruppe von Auswahlmöglichkeiten in einer Auswahlliste</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;option&gt;&lt;/option&gt;</td>
-
-<td>Auswahlmöglichkeit in einer Auswahlliste</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;p&gt;&lt;/p&gt;</td>
-
-<td>Textabsatz</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;param&gt;&lt;/param&gt;</td>
-
-<td>Parameter eines Objekts bei object-Element</td>
-<td>-</td>
-<td>Neutral</td>
-</tr>
-<tr>
-<td>&lt;pre&gt;&lt;/pre&gt;</td>
-
-<td>Präformatierter Text (alle Whitespace-Zeichen werden im
-Browser so dargestellt wie im Text enthalten)</td>
-<td>Block</td>
-<td>Nicht Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;q&gt;&lt;/q&gt;</td>
-
-<td>Wörtliche Rede in einem Text</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;samp&gt;&lt;/samp&gt;</td>
-
-<td>Beispieltext in einem dokumentierenden Text</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;script&gt;&lt;/script&gt;</td>
-
-<td>Scriptbereich für JavaScript und andere Scriptsprachen</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;select&gt;&lt;/select&gt;</td>
-
-<td>Auswahlliste in einem Formular</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;small&gt;&lt;/small&gt;</td>
-
-<td>kleiner dargestellter Text als Normalschrift</td>
-<td>Inline</td>
-<td>Nicht Semantic</td>
-</tr>
-<tr>
-<td>&lt;span&gt;&lt;/span&gt;</td>
-
-<td>allgemeiner Bereich innerhalb eines Absatzes</td>
-<td>Inline</td>
-<td>Neutral</td>
-</tr>
-<tr class="tr2">
-<td>&lt;strong&gt;&lt;/strong&gt;</td>
-
-<td>stark betonter Inhalt im Text</td>
-<td>Inline</td>
-<td>Nicht Semantic</td>
-</tr>
-<tr>
-<td>&lt;style&gt;&lt;/style&gt;</td>
-
-<td>Bereich für Stylesheet-Definitionen, z.B. in CSS</td>
-<td>-</td>
-<td>Neutral</td>
-</tr>
-<tr class="tr2">
-<td>&lt;sub&gt;&lt;/sub&gt;</td>
-
-<td>Tiefgestellter Text</td>
-<td>Inline</td>
-<td>Nicht Semantic</td>
-</tr>
-<tr>
-<td>&lt;sup&gt;&lt;/sup&gt;</td>
-
-<td>Hochgestellter Text</td>
-<td>Inline</td>
-<td>Nicht Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;table&gt;&lt;/table&gt;</td>
-
-<td>Tabelle</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;tbody&gt;&lt;/tbody&gt;</td>
-
-<td>Tabellenkörper mit den eigentlichen Daten</td>
-<td>-</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;td&gt;&lt;/td&gt;</td>
-
-<td>Tabellenzelle</td>
-<td>-</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;textarea&gt;&lt;/textarea&gt;</td>
-
-<td>Mehrzeiliger Eingabebereich in einem Formular</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;tfoot&gt;&lt;/tfoot&gt;</td>
-
-<td>Fußbereich in einer Tabelle, z.B. für summarische Daten</td>
-<td>-</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;th&gt;&lt;/th&gt;</td>
-
-<td>Tabellenkopfzelle</td>
-<td>-</td>
-<td>Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;thead&gt;&lt;/thead&gt;</td>
-
-<td>Kopfbereich einer Tabelle</td>
-<td>-</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;title&gt;&lt;/title&gt;</td>
-
-<td>Titel eines HTML-Dokuments</td>
-<td>-</td>
-<td>Neutral</td>
-</tr>
-<tr class="tr2">
-<td>&lt;tr&gt;&lt;/tr&gt;</td>
-
-<td>Tabellenzeile</td>
-<td>Inline</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;tt&gt;&lt;/tt&gt;</td>
-
-<td>Markiert einen Text, der im Schreibmaschinenstil
-dargestellt wird</td>
-<td>Inline</td>
-<td>Nicht Semantic</td>
-</tr>
-<tr class="tr2">
-<td>&lt;ul&gt;&lt;/ul&gt;</td>
-
-<td>Unsortierte Liste (Aufzählungsliste)</td>
-<td>Block</td>
-<td>Semantic</td>
-</tr>
-<tr>
-<td>&lt;var&gt;&lt;/var&gt;</td>
-
-<td>Variabler Name in einem dokumentierenden Text</td>
-<td>Inline</td>
-<td>Neutral</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div class="table">
-<h3>Quellen</h3>
-<div class="link">
-<ol>
-<li>
-<a href="http://meiert.com/de/publications/indices/html-elements/">http://meiert.com/de/publications/indices/html-elements/</a>
-</li>
-<li>
-<a href="http://webkompetenz.wikidot.com/html-handbuch:html-elementreferenz">http://webkompetenz.wikidot.com/html-handbuch:html-elementreferenz</a>
-</li>
-</ol>
-</div>
-<div class="foot" id="foot">
-<a href="http://validator.w3.org/check?uri=http%3A%2F%2Fdanielponath1.cloudcontrolled.com%2F"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="W3C" /></a><a href="http://redir.ec/trOAI"><img src="http://www.w3.org/Icons/valid-css2-blue" alt="W3C" /></a></div>
-</div>
-</body></html>
+<!DOCTYPE html>
+<!--[if IEMobile 7 ]>    <html class="no-js iem7"> <![endif]-->
+<!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="HandheldFriendly" content="True">
+        <meta name="MobileOptimized" content="320">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="cleartype" content="on">
+
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/touch/apple-touch-icon-144x144-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/touch/apple-touch-icon-114x114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/touch/apple-touch-icon-72x72-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" href="img/touch/apple-touch-icon-57x57-precomposed.png">
+        <link rel="shortcut icon" href="img/touch/apple-touch-icon.png">
+
+        <!-- Tile icon for Win8 (144x144 + tile color) -->
+        <meta name="msapplication-TileImage" content="img/touch/apple-touch-icon-144x144-precomposed.png">
+        <meta name="msapplication-TileColor" content="#222222">
+
+
+        <!-- For iOS web apps. Delete if not needed. https://github.com/h5bp/mobile-boilerplate/issues/94 -->
+        <!--
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-title" content="">
+        -->
+
+        <!-- This script prevents links from opening in Mobile Safari. https://gist.github.com/1042026 -->
+        <!--
+        <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
+        -->
+
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    </head>
+    <body>
+        <!-- Add your site or application content here -->
+        <script src="js/vendor/zepto.min.js"></script>
+        <script src="js/helper.js"></script>
+		<H1 align="center">
+		My First HTML5 App in the Cloud
+		</H1>
+		<p align="center">
+		<video width=90% controls>
+			<source src="video/video.mp4" type="video/mp4">
+			Dein Browser ist zu alt!
+		</p>
+     </body>
+</html>
